<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionFragment">

    <!-- I used linear layout because the design of this fragment is very simple for use constraint layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructionTextView"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/instructionTextTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/meduim_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/meduim_margin"
            android:layout_weight="1"
            android:text="@string/instruction_text" />

        <Button
            android:id="@+id/instructionNextButton"
            style="@style/button_default_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</layout>